Complete Level-10 GUI