@@ -48,7 +48,7 @@ test {
 }
 
 application {
-    mainClass.set("nimbus.Nimbus")
+    mainClass.set("nimbus.gui.Launcher")
 }
 
 shadowJar {
@@ -57,6 +57,10 @@ shadowJar {
     archiveFileName = "nimbus.jar"
 }
 
-run{
+run {
     standardInput = System.in
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls.javafx.fxml'
+    ]
 }
